# Skinchanger-test

./: .gitignore  CMakeLists.txt  skinchanger.cpp  skinchanger.hpp
.github/workflows/: build-debug.yml  build-release.yml
code_dump/: README.md
code_dump/alt_skinchanger_impl/: README.md  skinchanger.cpp  skinchanger.hpp
src/: dllmain.cpp
src/core/: logger.cpp  logger.hpp  memory.cpp  memory.hpp
src/features/skinchanger/: config.cpp  config.hpp  items.cpp  items.hpp  skinchanger.cpp  skinchanger.hpp
src/sdk/: inventory.cpp  inventory.hpp  offsets.hpp  schema.cpp  schema.hpp
src/ui/: imgui_backend.cpp  imgui_backend.hpp  skin_panel.cpp  skin_panel.hpp
srcs/: README.md  deepseek_cpp_20260413_072ccf.cpp  deepseek_cpp_20260413_c4ee07.cpp
srcs/extracted/Silent-Ware-main/: README.md
srcs/extracted/Silent-Ware-main/cstrike/: core.cpp
srcs/extracted/Silent-Ware-main/cstrike/core/: menu.cpp
srcs/extracted/Silent-Ware-main/dependencies/imgui/: imgui_draw.cpp  imgui_widgets.cpp
srcs/extracted/Silent-Ware-main/extensions/: binary.h
